1.增加通用网络模块

--- a/networkmodule/build.gradle
+++ b/networkmodule/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
@@ -6,6 +6,7 @@ android {
 
 
     defaultConfig {
+        applicationId "com.gacrnd.gcs.networkmodule"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
@@ -27,9 +28,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    //testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation project(":network")
 }
