--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
-    implementation 'org.junit.jupiter:junit-jupiter-api'
+   // implementation 'org.junit.jupiter:junit-jupiter-api'
 }
